presentation started initially

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,24 @@
-# Ignore Executable files generated from Makefile
-
-# Linux Executables
+# Linux Executable
 conv
 
-# Windows Executables
+# Windows Executable
 conv.exe
 
-# Ignore vscode directory
+# vscode directory
 .vscode/
 
-# Ignore disassembly
+# assembly files
 *.asm
 
-# Ignore perf output files
+# perf output files
 perf.data
 perf.data.old
+
+# Beamer Latex files
+presentation.log  
+presentation.out  
+presentation.snm  
+presentation.toc
+presentation.aux  
+presentation.nav  
+presentation.vrb
