Changed from new release to commit ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,12 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Zip file structure for Assignment
-        run: zip -r Assignment-2 beamer/presentation.pdf conv-harness.c Makefile tests/ tex/documentation.pdf
+        run: zip -r Assignment-2.zip beamer/presentation.pdf conv-harness.c Makefile tests/ tex/documentation.pdf
+
+      - name: Commit and push
+          uses: EndBug/add-and-commit@v7
+          with:
+            add: '["Assignment-2.zip"]'
+            message: 'My commit message'
+            push: true
       
-      - uses: rymndhng/release-on-push-action@master
-        with: 
-          bump_version_scheme: major
